# QT-Chat-messenger

./: CMakeLists.txt  README.md  main.cpp
client/: CMakeLists.txt  main.cpp
client/src/AuthorizationWindow/: AuthorizationWindow.cpp  AuthorizationWindow.h
client/src/AuthorizationWindow/ui/: authorization_window.ui  authorization_window_ui.h
client/src/MessengerWindow/: MessengerWindow.cpp  MessengerWindow.h
client/src/MessengerWindow/ui/: GUI_ChatMessenger.ui  ui_GUI_ChatMessenger.h
client/src/ServerCommunication/: ServerCommunication.h
client/src/User/: User.h
client/src/cpp/: main_window.cpp
client/src/include/: main_window.h
server/: CMakeLists.txt  main.cpp
server/src/Server/: Server.cpp  Server.h
